--- a/app/src/main/res/drawable/rectanglebox.xml
+++ b/app/src/main/res/drawable/rectanglebox.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:color="@color/ash_background" android:width="1dp"/>
     <solid android:color="@color/white"/>
+    <corners android:radius="10dp"/>
 </shape>
