--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,15 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:background="@color/ash_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.activity.MainActivity">
         <!--Swipe Refresh Layout -->
        <!-- <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/refreshLayout"
+            android:id="@+id/refreshLayoutMain"
             android:layout_width="match_parent"
             android:layout_height="match_parent">-->
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -64,9 +64,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabMode="scrollable"
-                />
+                app:tabGravity="center"/>
             <!--app:tabBackground="@drawable/tab_selector"-->
             <androidx.viewpager.widget.ViewPager
+                android:background="@color/ash"
                 android:id="@+id/view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -74,6 +75,6 @@
 
 
         </LinearLayout>
-        <!--</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+      <!--  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
