--- a/app/src/main/res/layout/fragment_humidity.xml
+++ b/app/src/main/res/layout/fragment_humidity.xml
@@ -14,7 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.tdsui.TDSFragment">
-
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refreshLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="0dp"
@@ -68,7 +71,7 @@
                 tools:listitem="@layout/row_item"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:adapter="@{channelViewModel.hmdtchannelAdapter()}"/>
+                android:adapter="@{channelViewModel.humidityAdapter()}"/>
 
 
         </LinearLayout>
@@ -83,5 +86,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
