--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,24 +35,35 @@
 
     <style name="Alert.Button.Positive" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="backgroundTint">@color/purple_500</item>
-        <item name="rippleColor">@color/teal_200</item>
+        <item name="rippleColor">@color/purple_700</item>
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="Alert.Button.Negative" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="rippleColor">@color/purple_500</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="Alert.Button.Neutral" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="backgroundTint">@android:color/transparent</item>
-        <item name="rippleColor">@color/teal_200</item>
+        <item name="rippleColor">@color/purple_500</item>
         <item name="android:textColor">@android:color/darker_gray</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
     <style name="RoundShapeTheme" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
         <item name="shapeAppearanceMediumComponent">@style/RoundShapeAppearance</item>
+        <item name="buttonBarPositiveButtonStyle">@style/Alert.Button.Positive</item>
+        <item name="buttonBarNeutralButtonStyle">@style/Alert.Button.Negative</item>
+        <item name="buttonBarNegativeButtonStyle">@style/Alert.Button.Neutral</item>
     </style>
 
     <style name="RoundShapeAppearance" parent="ShapeAppearance.MaterialComponents.MediumComponent">
-
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">16dp</item>
     </style>
